Exercise complete up to ping request

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Tester HTML Page</title>
+    <!--THIS REQUIRES THE JQUERY FOR THE PAGE!!!!  -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="ajax.js" charset="utf-8"></script>
   </head>
@@ -10,10 +11,14 @@
 
     <section id="step12">
       <h2>Step 1 and 2</h2>
+
+      <button type="button" name="request Root">Run AJAX Request to Root</button>
     </section>
 
     <section id="step3456">
       <h2>Step 3, 4, 5, 6</h2>
+      <button type="button" name="pingPong" class="pingpong">Run AJAX Request to Ping/Pong</button>
+
     </section>
 
     <section id="step7">
