Exercise Complete with 1st stretch

--- a/index.html
+++ b/index.html
@@ -23,14 +23,22 @@
 
     <section id="step7">
       <h2>Step 7</h2>
+      <button type="button" name="pingPong" class="count">Run AJAX Request to Count</button>
+
     </section>
 
     <section id="step8">
       <h2>Step 8</h2>
+      <button type="button" name="pingPong" class="time">Run AJAX Request to Time</button>
+
     </section>
 
     <section id="step9">
       <h2>Step 9</h2>
+      <button type="button" name="pingPong" class="car">Run AJAX Request to A Car </button>
+      <ul id="carlist">
+
+      </ul>
     </section>
 
   </body>
